<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#ff000000"
    android:layout_height="match_parent"
    android:weightSum="1">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/StringAboutTitle"
        android:id="@+id/txtViewMeusTeatrosTeatro"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffffff"
        android:paddingTop="15dp"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringAbout1"
        android:gravity="fill_horizontal|center_horizontal"
        android:typeface="sans"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_margin="10dp"
        android:textIsSelectable="false"
        android:textColor="#ffffffff" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringAbout2"
        android:gravity="fill_horizontal|center_horizontal"
        android:typeface="sans"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_margin="10dp"
        android:textIsSelectable="false"
        android:textColor="#ffffffff" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringAbout3"
        android:gravity="fill_horizontal|center_horizontal"
        android:typeface="sans"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_margin="10dp"
        android:textIsSelectable="false"
        android:textColor="#ffffffff" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringAbout4"
        android:gravity="fill_horizontal|center_horizontal"
        android:typeface="sans"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_margin="10dp"
        android:textIsSelectable="false"
        android:textColor="#ffffffff" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/StringVersaoApp"
        android:id="@+id/textViewVersãoDoApp"
        android:layout_margin="10dp"
        android:textColor="#ffffffff"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/stringContactTitle"
        android:textColor="#ffffffff"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/stringContact"
        android:layout_margin="10dp"
        android:textColor="#ffffffff"
        />
</LinearLayout>
</ScrollView>
</LinearLayout>